@@ -2,6 +2,8 @@
 
     * Fixed many bugs in the DefaultViewTreeModel, DefaultViewTree,
       DefaultViewTreeNode, and AdapterNode
+    * Added code to remember the expanded states of nodes after they are
+      dragged and dropped into other nodes
 
 05/15/2004  version 0.1.74  Ian Lewis <IanLewis@member.fsf.org>
 
